# MCSRRankedAPY

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MCSRRankedAPY/: __init__.py  client.py  tester.py
MCSRRankedAPY/objects/: exceptions.py  leaderboards.py  match_info.py  user_profile.py  versus_stats.py
mcsrrankedapy/: __init__.py  client.py
mcsrrankedapy/objects/: leaderboards.py  match_info.py  user_profile.py
